# proxmox-setup-ansible

./: .gitignore  1_proxy.yml  2_proxmox-update.yml  3_sdn-prerequisites.yml  README.md  ansible.cfg  install-qemu-guest-agent.yml  inventory.yml.example  mirror-test.txt  pyproject.toml  requirements.txt  setup.yml
